--- a/index.html
+++ b/index.html
@@ -18,7 +18,142 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header class="container">
+      <!-- nav start  -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container justify-content-evenly">
+          <a class="navbar-brand" href="#"><span>Edu</span>mark</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Courses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Deals</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Success</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">About</a>
+              </li>
+            </ul>
+            <button class="btn btn-outline-success" type="submit">
+              Register
+            </button>
+          </div>
+        </div>
+      </nav>
+      <!-- nav End  -->
+
+      <!-- caurousel slider Start   -->
+      <section class="mt-5">
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide"
+          data-bs-ride="true"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active rounded">
+              <div class="overlay"></div>
+              <img
+                src="img/cover/cover-1.png"
+                class="img-fluid d-block w-100"
+                alt=""
+              />
+              <div
+                class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
+              >
+                <div>
+                  <h1 class="">First slide label</h1>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <!-- slider 2 -->
+            <div class="carousel-item">
+              <div class="overlay"></div>
+              <img
+                src="img/cover/cover-2.png"
+                class="img-fluid d-block w-100"
+                alt=""
+              />
+              <div
+                class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
+              >
+                <div>
+                  <h1 class="">First slide label</h1>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <!-- slider 3 -->
+            <div class="carousel-item">
+              <div class="overlay"></div>
+              <img
+                src="img/cover/cover-3.jpg"
+                class="img-fluid d-block w-100"
+                alt=""
+              />
+              <div
+                class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
+              >
+                <div>
+                  <h1 class="">First slide label</h1>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <!-- ############# -->
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <!-- caurousel slider End   -->
+    </header>
+
+    <!-- main start -->
+    <main class="container"></main>
 
     <!-- Bootstrap js CDN  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
