--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <!-- nav End  -->
 
       <!-- caurousel slider Start   -->
-      <section class="mt-5">
+      <section class="my-3">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
-          data-bs-ride="true"
+          data-bs-ride="carousel"
         >
           <div class="carousel-inner">
             <div class="carousel-item active rounded">
@@ -79,11 +79,15 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h1 class="">First slide label</h1>
-                  <p>
-                    Some representative placeholder content for the first slide.
+                  <h1 class="p-2 slider-title">
+                    Best Online Education Expertise
+                  </h1>
+                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
+                    Start, switch, or advance your career with our courses with
+                    Professional Certificates, and degrees from world-class
+                    universities and companies.
                   </p>
-                  <button class="btn btn-primary">Get Started</button>
+                  <button class="btn btn-custom shadow">Get Started</button>
                 </div>
               </div>
             </div>
@@ -99,11 +103,14 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h1 class="">First slide label</h1>
-                  <p>
-                    Some representative placeholder content for the first slide.
+                  <h1 class="p-2 slider-title">
+                    Learn new skills online with top Instructors!
+                  </h1>
+                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
+                    Discover free how-to tutorials and video courses. Build an
+                    app, create a website, or learn a new skill.
                   </p>
-                  <button class="btn btn-primary">Get Started</button>
+                  <button class="btn btn-custom shadow">Get Started</button>
                 </div>
               </div>
             </div>
@@ -119,11 +126,14 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h1 class="">First slide label</h1>
-                  <p>
-                    Some representative placeholder content for the first slide.
+                  <h1 class="p-2 slider-title">
+                    No Nation Can Prosper In Life Without Education
+                  </h1>
+                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
+                    Learn the fundamental skills you need to navigate the keys
+                    and play your favorite songs with pianist Elijah Fox.
                   </p>
-                  <button class="btn btn-primary">Get Started</button>
+                  <button class="btn btn-custom shadow">Get Started</button>
                 </div>
               </div>
             </div>
@@ -153,7 +163,195 @@
     </header>
 
     <!-- main start -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="courses my-5">
+        <div class="section-title text-center my-5">
+          <h1>Discover Our Popular Courses</h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-1.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">
+                      Fundamental Of UI/UX Design
+                    </h5>
+                    <p class="card-text">
+                      This course covers the UX/UI Design fundamentals and
+                      teaches you a few advanced ideas so that both levels
+                    </p>
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 2 -->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-2.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">
+                      Javascript Basic to advanced
+                    </h5>
+                    <p class="card-text">
+                      A perfect JavaScript course for all those who want to
+                      learn and master JavaScript programming skills right from
+                      scratch.
+                    </p>
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 3 -->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-3.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">
+                      Fullstack Web Development
+                    </h5>
+                    <p class="card-text">
+                      Try a full stack web development course and learn the most
+                      in-demand website coding skills of real-world.
+                    </p>
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 4 -->
+          <div class="col-lg-6 col-md-12 col-sm-12 d-md-none d-none d-lg-block">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-4.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">Digital Marketing</h5>
+                    <p class="card-text">
+                      Enhance Your Digital Marketing Skills with Best Digital
+                      Marketing Certification Courses.
+                    </p>
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 5 -->
+          <div class="col-lg-6 col-md-12 col-sm-12 d-md-none d-none d-lg-block">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-5.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">
+                      Photography Basic Rules
+                    </h5>
+                    <p class="card-text">
+                      Take a photography course with real world experts on
+                      Edumark. We have classes that will fit any skill level.
+                    </p>
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 6 -->
+          <div class="col-lg-6 col-md-12 col-sm-12 d-md-none d-none d-lg-block">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                  <img
+                    src="img/course/course-6.png"
+                    class="img-fluid rounded"
+                    alt=""
+                    width="500"
+                    height="500"
+                  />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                  <div class="card-body">
+                    <h5 class="card-title fw-semibold">Motion Graphics</h5>
+                    <p class="card-text">
+                      A practical structured course on combining frame-by-frame
+                      animation and After Effects.
+                    </p>
+
+                    <h5 class="price">Price: 20$</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-custom d-lg-block d-md-none d-none">
+            See more Courses
+          </button>
+          <button class="btn btn-custom d-lg-none d-md-block d-block">
+            View All
+          </button>
+        </div>
+      </section>
+      <!-- course section end  -->
+
+      
+    </main>
 
     <!-- Bootstrap js CDN  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
