Explore and join us Section added with Modal

--- a/index.html
+++ b/index.html
@@ -350,7 +350,179 @@
       </section>
       <!-- course section end  -->
 
-      
+      <!-- explore section start -->
+
+      <section class="container my-3">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 experience">
+            <img src="img/working.png" class="img-fluid" alt="" />
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 mt-lg-5 mt-md-0 mt-sm-3">
+            <h1>Explore The elearning Institute</h1>
+            <p>
+              e-Learning involves the delivery and administration of learning
+              opportunities and support via computer, networked and web- based
+              technology, to help individual performance and development.
+            </p>
+            <p class="d-none d-lg-block d-md-none">
+              Anything embarrassing hidden in the middle of text. All the Lorem
+              Ipsum generators on the Internet tend to repeat predefined
+            </p>
+            <div class="d-flex flex-wrap justify-content-around">
+              <div class="online-course">
+                <h1>3.2K+</h1>
+                <p>Online Course</p>
+              </div>
+              <div class="expart-member">
+                <h1>600+</h1>
+                <p>Expart Member</p>
+              </div>
+              <div class="rating">
+                <h1>1K+</h1>
+                <p>Rating & Review</p>
+              </div>
+            </div>
+            <button class="btn btn-custom">Red More</button>
+          </div>
+        </div>
+      </section>
+      <!-- explore section end -->
+
+      <!-- join section start  -->
+      <section class="join-us my-5">
+        <div class="join row rounded-3 bg-primary p-5 text-white">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <h1>Ready to join?</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
+              officiis.
+            </p>
+          </div>
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center"
+          >
+            <button
+              class="btn btn-custom bg-white text-dark px-5"
+              data-bs-target="#exampleModalToggle"
+              data-bs-toggle="modal"
+            >
+              Register
+            </button>
+          </div>
+        </div>
+        <!-- join part end  -->
+
+        <!-- modal part start -->
+        <div
+          class="modal fade"
+          id="exampleModalToggle"
+          aria-hidden="true"
+          aria-labelledby="exampleModalToggleLabel"
+          tabindex="-1"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalToggleLabel">
+                  User Ragistration
+                </h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form class="row g-3">
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="firstName" class="">First Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="firstName"
+                      placeholder="First Name"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="lastName" class="">Last Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="lastName"
+                      placeholder="Last Name"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="staticEmail" class="">Email</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="staticEmail"
+                      placeholder="example@gmail.com"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="inputPassword" class="">Password</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="inputPassword"
+                      placeholder="Password"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="confirmPassword" class=""
+                      >Confirm Password</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="confirmPassword"
+                      placeholder="Password"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <label for="">Gender:</label> <br />
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="male"
+                        id="male"
+                        value="male"
+                      />
+                      <label class="form-check-label" for="male">Male</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="female"
+                        id="female"
+                        value="female"
+                      />
+                      <label class="form-check-label" for="female"
+                        >Female</label
+                      >
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-8 col-sm-10">
+                    <button type="submit" class="btn btn-primary mb-3">
+                      Register
+                    </button>
+                    <button type="reset" class="btn btn-primary mb-3">
+                      Reset
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- modal part end -->
+      </section>
+      <!-- join section end  -->
     </main>
 
     <!-- Bootstrap js CDN  -->
