--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@
       <!-- join section start  -->
       <section class="join-us my-5">
         <div class="join row rounded-3 bg-primary p-5 text-white">
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div
+            class="col-lg-6 col-md-12 col-sm-12 text-lg-start text-md-center text-center"
+          >
             <h1>Ready to join?</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
@@ -399,7 +401,7 @@
             </p>
           </div>
           <div
-            class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center"
+            class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center align-items-center"
           >
             <button
               class="btn btn-custom bg-white text-dark px-5"
@@ -523,6 +525,80 @@
         <!-- modal part end -->
       </section>
       <!-- join section end  -->
+
+      <!-- our success student start  -->
+
+      <section class="success-student my-5">
+        <div
+          class="section-title text-lg-start text-md-start text-center m-0 my-5"
+        >
+          <h1 class="fw-bold">Meet Our Successfull Students</h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="row g-5">
+          <!-- card-1  -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card">
+              <img
+                src="img/student/student-1.png"
+                class="img-fluid rounded-top"
+                alt=""
+              />
+              <div class="card-body">
+                <h4>Awlad Hussign</h4>
+                <h6 class="text-secondary">UI/UX Designer</h6>
+              </div>
+            </div>
+          </div>
+          <!-- card-2  -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card">
+              <img
+                src="img/student/student-2.png"
+                class="img-fluid rounded-top"
+                alt=""
+              />
+              <div class="card-body">
+                <h4>Jannatul Riya</h4>
+                <h6 class="text-secondary">Motion Designer</h6>
+              </div>
+            </div>
+          </div>
+          <!-- card-3  -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card">
+              <img
+                src="img/student/student-3.png"
+                class="img-fluid rounded-top"
+                alt=""
+              />
+              <div class="card-body">
+                <h4>Rakib Hasan</h4>
+                <h6 class="text-secondary">Graphics Designer</h6>
+              </div>
+            </div>
+          </div>
+          <!-- card-4  -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card">
+              <img
+                src="img/student/student-4.png"
+                class="img-fluid rounded-top"
+                alt=""
+              />
+              <div class="card-body">
+                <h4>Nafiza Nafi</h4>
+                <h6 class="text-secondary">Web Developer</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- our success student start  -->
     </main>
 
     <!-- Bootstrap js CDN  -->
