--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
 
+    <!-- font awesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/2161eb502c.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- favicon  -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
@@ -541,7 +547,7 @@
         <div class="row g-5">
           <!-- card-1  -->
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card">
+            <div class="card d-lg-block d-md-block d-none">
               <img
                 src="img/student/student-1.png"
                 class="img-fluid rounded-top"
@@ -596,9 +602,121 @@
             </div>
           </div>
         </div>
+        <button class="btn btn-custom d-lg-block d-md-none d-block m-auto my-5">
+          View All
+        </button>
       </section>
+      <!-- our success student End  -->
 
-      <!-- our success student start  -->
+      <!-- feedback start  -->
+      <section class="feedback m-5">
+        <div
+          class="section-title text-lg-start text-md-start text-center m-0 my-5"
+        >
+          <h1 class="fw-bold">Meet Our Successfull Students</h1>
+          <p>
+            Learner Reviews & Feedback for Giving Helpful Feedback by University
+            of Colorado Boulder
+          </p>
+        </div>
+        <div class="row g-3 arrow">
+          <!-- card 1  -->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card p-3">
+              <div class="top p-3 d-flex justify-content-between">
+                <img src="img/comma.png" alt="" />
+                <div class="rating">
+                  <ul class="d-flex rating-star">
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star-half-stroke"></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  This course was short but very informative and very helpful
+                  for an aspiring leader like myself. It also helped me
+                  understand how to view or understand when I receive feedback.
+                  I highly recommend it!!
+                </p>
+              </div>
+              <div class="users d-flex align-items-center">
+                <div>
+                  <img src="img/student/student-5.png" alt="" />
+                </div>
+                <div class="user-info ms-3">
+                  <h5>Awlad Hussin</h5>
+                  <p class="text-secondary">UI/UX Designer</p>
+                </div>
+                <p></p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 2  -->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card p-3">
+              <div class="top p-3 d-flex justify-content-between">
+                <img src="img/comma.png" alt="" />
+                <div class="rating">
+                  <ul class="d-flex rating-star">
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="text-warning">
+                      <i class="fa-solid fa-star-half-stroke"></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  This course was short but very informative and very helpful
+                  for an aspiring leader like myself. It also helped me
+                  understand how to view or understand when I receive feedback.
+                  I highly recommend it!!
+                </p>
+              </div>
+              <div class="users d-flex align-items-center">
+                <div>
+                  <img src="img/student/student-6.png" alt="" />
+                </div>
+                <div class="user-info ms-3">
+                  <h5>Sahnaj Sopna</h5>
+                  <p class="text-secondary">Digital Marketer</p>
+                </div>
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn-custom d-lg-none d-md-block d-block m-auto my-5">
+          View All
+        </button>
+      </section>
+      <!-- feedback end  -->
     </main>
 
     <!-- Bootstrap js CDN  -->
