Company Section Added

--- a/index.html
+++ b/index.html
@@ -846,7 +846,39 @@
         </div>
       </section>
       <!-- FAQ end  -->
+      <section class="sponsored my-5 d-lg-block d-md-none d-none">
+        <div class="title my-5">
+          <h1 class="fw-bold text-dark text-center">
+            Trusted by over 800+ companies
+          </h1>
+        </div>
+        <div
+          class="companies d-flex justify-content-around align-items-center my-3"
+        >
+          <div>
+            <img src="img/company/company-1.png" alt="" />
+          </div>
+          <div>
+            <img src="img/company/company-2.png" alt="" />
+          </div>
+          <div>
+            <img src="img/company/company-3.png" alt="" />
+          </div>
+          <div>
+            <img src="img/company/company-4.png" alt="" />
+          </div>
+          <div>
+            <img src="img/company/company-5.png" alt="" />
+          </div>
+          <div>
+            <img src="img/company/company-6.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- main end  -->
+
+    <!-- footer start   -->
 
     <!-- Bootstrap js CDN  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
