--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="container">
       <!-- nav start  -->
       <nav class="navbar navbar-expand-lg">
-        <div class="container justify-content-evenly">
+        <div class="container">
           <a class="navbar-brand" href="#"><span>Edu</span>mark</a>
           <button
             class="navbar-toggler"
@@ -879,6 +879,36 @@
     <!-- main end  -->
 
     <!-- footer start   -->
+
+    <footer class="bg-dark text-white text-center p-5">
+      <h1 class="fw-bold p-5">Edumark | Digital Learning Platform</h1>
+      <hr />
+      <p class="py-3">Head Office : 3959 Terry Lane, Orlando, FL, USA</p>
+      <div class="d-flex justify-content-center py-3">
+        <a href="#" class="nav-link pe-3 border-end-3 border-white"
+          >Privacy Ploicy</a
+        >
+        <a href="#" class="nav-link ps-3">Terms of use</a>
+      </div>
+      <hr />
+      <ul class="social-icon d-flex justify-content-center py-3">
+        <li>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+        </li>
+      </ul>
+      <p>&copy copyright all right reserved, 2022</p>
+    </footer>
+
+    <!-- footer end   -->
 
     <!-- Bootstrap js CDN  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
