--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <body>
     <header class="container">
       <!-- nav start  -->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><span>Edu</span>mark</a>
+          <a class="navbar-brand fw-bold logo" href="#"
+            >Edu<span class="text-custom">mark</span></a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -41,20 +43,20 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+              <li class="nav-item me-5">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link" aria-current="page" href="#">Courses</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link" aria-current="page" href="#">Deals</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link" aria-current="page" href="#">Success</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link" aria-current="page" href="#">About</a>
               </li>
             </ul>
@@ -67,7 +69,7 @@
       <!-- nav End  -->
 
       <!-- caurousel slider Start   -->
-      <section class="my-3">
+      <section class="slider mt-3">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
@@ -85,13 +87,11 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h1 class="p-2 slider-title">
+                  <h2 class="p-lg-2 p-md-2 p-0">
                     Best Online Education Expertise
-                  </h1>
-                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
-                    Start, switch, or advance your career with our courses with
-                    Professional Certificates, and degrees from world-class
-                    universities and companies.
+                  </h2>
+                  <p class="p-lg-2 p-md-2 p-0">
+                    Start, switch, or advance your career with our courses.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
                 </div>
@@ -109,12 +109,11 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h1 class="p-2 slider-title">
+                  <h2 class="p-lg-2 p-md-2 p-0">
                     Learn new skills online with top Instructors!
-                  </h1>
-                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
-                    Discover free how-to tutorials and video courses. Build an
-                    app, create a website, or learn a new skill.
+                  </h2>
+                  <p class="p-lg-2 p-md-2 p-0">
+                    Discover free how-to tutorials and video courses.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
                 </div>
@@ -129,15 +128,12 @@
                 alt=""
               />
               <div
-                class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
+                class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5"
               >
                 <div>
-                  <h1 class="p-2 slider-title">
-                    No Nation Can Prosper In Life Without Education
-                  </h1>
-                  <p class="p-2 d-none d-lg-block d-md-block fw-semibold">
-                    Learn the fundamental skills you need to navigate the keys
-                    and play your favorite songs with pianist Elijah Fox.
+                  <h2 class="p-lg-2 p-md-2 p-0">Start your learning now!</h2>
+                  <p class="p-lg-2 p-md-2 p-0">
+                    Learn the fundamental skills you need to navigate your life.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
                 </div>
@@ -169,7 +165,7 @@
     </header>
 
     <!-- main start -->
-    <main class="container">
+    <main class="container mb-5">
       <section class="courses my-5">
         <div class="section-title text-center my-5">
           <h1>Discover Our Popular Courses</h1>
@@ -346,10 +342,10 @@
           </div>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="btn btn-custom d-lg-block d-md-none d-none">
+          <button class="btn btn-custom d-lg-block d-md-none d-none my-5">
             See more Courses
           </button>
-          <button class="btn btn-custom d-lg-none d-md-block d-block">
+          <button class="btn btn-custom d-lg-none d-md-block d-block my-5">
             View All
           </button>
         </div>
@@ -401,10 +397,7 @@
             class="col-lg-6 col-md-12 col-sm-12 text-lg-start text-md-center text-center"
           >
             <h1>Ready to join?</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-              officiis.
-            </p>
+            <p>Advance Your Career. Learn In-demand Skills.</p>
           </div>
           <div
             class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center align-items-center"
@@ -619,7 +612,14 @@
             of Colorado Boulder
           </p>
         </div>
-        <div class="row g-3 arrow">
+        <div class="row g-3 position-relative">
+          <span class="position-absolute arrow-left d-lg-flex d-md-none d-none"
+            ><i class="fa-solid fa-angle-left"></i
+          ></span>
+          <span class="position-absolute arrow-right d-lg-flex d-md-none d-none"
+            ><i class="fa-solid fa-angle-right"></i
+          ></span>
+
           <!-- card 1  -->
           <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="card p-3">
@@ -853,7 +853,7 @@
           </h1>
         </div>
         <div
-          class="companies d-flex justify-content-around align-items-center my-3"
+          class="companies d-flex justify-content-around align-items-center my-5"
         >
           <div>
             <img src="img/company/company-1.png" alt="" />
@@ -880,8 +880,11 @@
 
     <!-- footer start   -->
 
-    <footer class="bg-dark text-white text-center p-5">
-      <h1 class="fw-bold p-5">Edumark | Digital Learning Platform</h1>
+    <footer class="bg-dark text-white text-center p-5 mt-5">
+      <h1 class="fw-bold p-5">
+        Edu<span class="text-custom fw-semibold">mark</span> |
+        <span class="fw-normal">Digital Learning Platform</span>
+      </h1>
       <hr />
       <p class="py-3">Head Office : 3959 Terry Lane, Orlando, FL, USA</p>
       <div class="d-flex justify-content-center py-3">
