--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h2 class="p-lg-2 p-md-2 p-0">
+                  <h2 class="p-lg-2 p-md-2 p-0 slider-title">
                     Best Online Education Expertise
                   </h2>
-                  <p class="p-lg-2 p-md-2 p-0">
+                  <p class="p-lg-2 p-md-2 p-0 desc">
                     Start, switch, or advance your career with our courses.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
@@ -109,10 +109,10 @@
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5 p-3"
               >
                 <div>
-                  <h2 class="p-lg-2 p-md-2 p-0">
+                  <h2 class="p-lg-2 p-md-2 p-0 slider-title">
                     Learn new skills online with top Instructors!
                   </h2>
-                  <p class="p-lg-2 p-md-2 p-0">
+                  <p class="p-lg-2 p-md-2 p-0 desc">
                     Discover free how-to tutorials and video courses.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
@@ -130,9 +130,11 @@
               <div
                 class="carousel-caption d-flex align-items-center justify-content-center text-white h-100 mt-5"
               >
-                <div>
-                  <h2 class="p-lg-2 p-md-2 p-0">Start your learning now!</h2>
-                  <p class="p-lg-2 p-md-2 p-0">
+                <div class="my-3">
+                  <h2 class="p-lg-2 p-md-2 p-0 slider-title">
+                    Start your learning now!
+                  </h2>
+                  <p class="p-lg-2 p-md-2 p-0 desc">
                     Learn the fundamental skills you need to navigate your life.
                   </p>
                   <button class="btn btn-custom shadow">Get Started</button>
