--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                       This course covers the UX/UI Design fundamentals and
                       teaches you a few advanced ideas so that both levels
                     </p>
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                       learn and master JavaScript programming skills right from
                       scratch.
                     </p>
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
@@ -255,7 +255,7 @@
                       Try a full stack web development course and learn the most
                       in-demand website coding skills of real-world.
                     </p>
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
@@ -281,7 +281,7 @@
                       Enhance Your Digital Marketing Skills with Best Digital
                       Marketing Certification Courses.
                     </p>
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
@@ -309,7 +309,7 @@
                       Take a photography course with real world experts on
                       Edumark. We have classes that will fit any skill level.
                     </p>
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
@@ -336,7 +336,7 @@
                       animation and After Effects.
                     </p>
 
-                    <h5 class="price">Price: 20$</h5>
+                    <h5 class="price price-color">Price: 20$</h5>
                   </div>
                 </div>
               </div>
